--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,17 +1,19 @@
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-  <button class="navbar-toggler navbar-toggler-right" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" aria-controls="exCollapsingNavbar2" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded" id="main-nav-bar">
+  <div class="container">
+    <button class="navbar-toggler navbar-toggler-right" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" aria-controls="collapsingNavbar" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="#">Miami Beach Club</a>
-  <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="exCollapsingNavbar2">
-    <div class="navbar-nav mr-auto">
-      <a class="nav-item nav-link" routerLink="/apartments" routerLinkActive="active">Apartments</a>
-      <a class="nav-item nav-link" routerLink="/neighborhood" routerLinkActive="active">Neighborhood</a>
-      <a class="nav-item nav-link" routerLink="/rates" routerLinkActive="active">Rates</a>
-      <a class="nav-item nav-link" routerLink="/common-areas" routerLinkActive="active">Common Areas</a>
-      <a class="nav-item nav-link" routerLink="/contact" routerLinkActive="active">Contact Us</a>
-      <a class="nav-item nav-link" routerLink="/rules" routerLinkActive="active">Rules & Regulations</a>
+    <a class="navbar-brand" href="#">Miami Beach Club</a>
+    <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="collapsingNavbar">
+      <div class="navbar-nav mr-auto">
+        <a class="nav-item nav-link" routerLink="/apartments" routerLinkActive="active">Apartments</a>
+        <a class="nav-item nav-link" routerLink="/neighborhood" routerLinkActive="active">Neighborhood</a>
+        <a class="nav-item nav-link" routerLink="/rates" routerLinkActive="active">Rates</a>
+        <a class="nav-item nav-link" routerLink="/common-areas" routerLinkActive="active">Common Areas</a>
+        <a class="nav-item nav-link" routerLink="/contact" routerLinkActive="active">Contact Us</a>
+        <a class="nav-item nav-link" routerLink="/rules" routerLinkActive="active">Rules & Regulations</a>
 
+      </div>
     </div>
   </div>
 </nav>
