removed blue border from appearing when carousel is clicked

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mbc-nav-bar></mbc-nav-bar>
-<!-- <div class="container-fluid">
+<div class="container-fluid">
   <div class="row">
     <div class="col-xs-12" id="carousel-col">
       <ngb-carousel id="main-carousel">
@@ -27,4 +27,4 @@
       </ngb-carousel>
     </div>
   </div>
-</div> -->
+</div>
