--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  background-color: #87B6A7
+  background-color: #87B6A7;
 }
