specified colors to use in styles.scss

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+/*
+ * Colors to use
+ * #F79F79
+ * #F7D08A
+ * #E3F09B
+ * #87B6A7
+ * #5B5941
+ */
+
 body {
   background-color: #87B6A7;
 }
