--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,39 +1,2 @@
 <mbc-nav-bar></mbc-nav-bar>
-<div class="container-fluid" id="app-container">
-  <div class="row">
-    <div class="col-md-1"></div>
-    <div class="col-xs-12 col-md-10" id="carousel-col">
-      <ngb-carousel id="main-carousel">
-        <template ngbSlide>
-          <img src="../assets/img/beach1.jpg" alt="Random first slide">
-          <div class="carousel-caption">
-            <h3>First slide label</h3>
-            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-          </div>
-        </template>
-        <template ngbSlide>
-          <img src="../assets/img/beach2.jpg" alt="Random second slide">
-          <div class="carousel-caption">
-            <h3>Second slide label</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          </div>
-        </template>
-        <template ngbSlide>
-          <img src="../assets/img/beach3.jpg" alt="Random third slide">
-          <div class="carousel-caption">
-            <h3>Third slide label</h3>
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-          </div>
-        </template>
-        <template ngbSlide>
-          <img src="../assets/img/beach4.jpg" alt="Random fourth slide">
-          <div class="carousel-caption">
-            <h3>Fourth slide label</h3>
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-          </div>
-        </template>
-      </ngb-carousel>
-    </div>
-    <div class="col-md-1"></div>
-  </div>
-</div>
+<mbc-landing></mbc-landing>
