basic routing works

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -4,7 +4,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="container">
-    <a class="navbar-brand" href="/">Miami Beach Club</a>
+    <a class="navbar-brand" routerLink="/" routerLinkActive="active">Miami Beach Club</a>
     <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="collapsingNavbar">
       <div class="navbar-nav mr-auto">
         <a class="nav-item nav-link" routerLink="/apartments" routerLinkActive="active">Apartments</a>
