apartments page shows all apartments from const data set. apartment box floats on hover

--- a/src/app/all-apartments/all-apartments.component.html
+++ b/src/app/all-apartments/all-apartments.component.html
@@ -1,3 +1,5 @@
-<p>
-  all-apartments works!
-</p>
+<div *ngFor="let apartment of apartments">
+  <div class="apartment-container">
+    <span>{{apartment.name}}</span>
+  </div>
+</div>
